- Add cursor to all navigation controls on hover - Add link hover mixing options in shared module - Refactored and simplified navigation styling -- Add 'box-sizing: border-box;' props in order to prevent paddings from changing bounds -- Improve navigation items spacing -- etc.

--- a/controls/buttons.scss
+++ b/controls/buttons.scss
@@ -182,5 +182,9 @@ $bt-transition-time: vars.$transition-time 1.0s !default;
     height: auto;
 }
 
+.rbtn:hover {
+    cursor: pointer; 
+}
+
 
 /* Note: a low z-index on any ancestor can break :hover and :active events in all descendants*/
